# Slope-Poke

./: .gitattributes  .gitignore  CLAUDE.md  README.md  project_context.txt  pyproject.toml  setup.bat  setup.sh
configs/cameras/: example.json
configs/scenes/: example.json
configs/schema/: cameras.schema.json  scene.schema.json
python/slope_poke/: __init__.py  cli.py
python/slope_poke/algorithms/: __init__.py  base.py  frame_diff.py  mog2.py
python/slope_poke/config/: __init__.py  generators.py  models.py
python/slope_poke/control/: __init__.py  ptz_client.py
python/slope_poke/coverage/: __init__.py  analyzer.py  receiver.py
python/slope_poke/pipeline/: runner.py
python/slope_poke/recording/: __init__.py  models.py  recorder.py  replayer.py
python/slope_poke/simulator_client/: __init__.py  client.py  exceptions.py  metadata_subscriber.py  spout_receiver.py  types.py
python/slope_poke/tools/: __init__.py  layout.py  projection.py  viewer.py
python/tests/: test_camera_generators.py  test_config_roundtrip.py  test_coverage_analyzer.py  test_projection.py  test_ptz_command.py  test_recording_roundtrip.py
scripts/: diag.py  fetch-netmq.ps1
unity-project/: .gitignore  README.md
unity-project/Assets/HDRPDefaultResources/: DefaultSettingsVolumeProfile.asset  HDRenderPipelineGlobalSettings.asset
unity-project/Assets/Plugins/: README.md
unity-project/Assets/Scenes/: Smoke.unity
unity-project/Plugins/: README.md
unity-project/ProjectSettings/: GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset
(+22 files in other folders)
